--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+     "Linear regression"
+   ]
   },
   {
    "cell_type": "code",
