--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -5,7 +5,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "Linear regression"
+     "Linear regression",
+     "Here is my practice lab's code which I was sopposed to complete some parts of code .",
+     "Outline
+1 - Packages
+2 - Linear regression with one variable
+2.1 Problem Statement
+2.2 Dataset
+2.3 Refresher on linear regression
+2.4 Compute Cost
+Exercise 1
+2.5 Gradient descent
+Exercise 2
+2.6 Learning parameters using batch gradient descent",
+"Problem Statement :
+Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.
+
+You would like to expand your business to cities that may give your restaurant higher profits.
+The chain already has restaurants in various cities and you have data for profits and populations from the cities.
+You also have data on cities that are candidates for a new restaurant.
+For these cities, you have the city population.
+Can you use the data to help you identify which cities may potentially give your business higher profits?
+
+ Dataset
+You will start by loading the dataset for this task.
+
+The load_data() function shown below loads the data into variables x_train and y_train
+x_train is the population of a city
+y_train is the profit of a restaurant in that city. A negative value for profit indicates a loss.
+Both X_train and y_train are numpy arrays.   
+but this fataset was not accessible ,so I found it from Kaggle site and I changed some parts of original code to fix some problems . The download address of dataset : /kaggle/input/dataset/Files/ex1data1.txt"
    ]
   },
   {
