--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -7,28 +7,28 @@
    "source": [
      "Linear regression",
      "Here is my practice lab's code which I was sopposed to complete some parts of code .",
-     "Outline
-1 - Packages
-2 - Linear regression with one variable
-2.1 Problem Statement
-2.2 Dataset
-2.3 Refresher on linear regression
-2.4 Compute Cost
-Exercise 1
-2.5 Gradient descent
-Exercise 2
-2.6 Learning parameters using batch gradient descent",
+     "Outline"  ,
+"1 - Packages",   
+"2 - Linear regression with one variable",   
+"2.1 Problem Statement"   
+"2.2 Dataset",   
+"2.3 Refresher on linear regression",   
+"2.4 Compute Cost",   
+"Exercise 1",   
+"2.5 Gradient descent",   
+"Exercise 2",   
+"2.6 Learning parameters using batch gradient descent",
 "Problem Statement :
-Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.
+Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.",
 
-You would like to expand your business to cities that may give your restaurant higher profits.
+"You would like to expand your business to cities that may give your restaurant higher profits.
 The chain already has restaurants in various cities and you have data for profits and populations from the cities.
 You also have data on cities that are candidates for a new restaurant.
 For these cities, you have the city population.
-Can you use the data to help you identify which cities may potentially give your business higher profits?
+Can you use the data to help you identify which cities may potentially give your business higher profits?",
 
- Dataset
-You will start by loading the dataset for this task.
+" Dataset:,   
+"You will start by loading the dataset for this task.
 
 The load_data() function shown below loads the data into variables x_train and y_train
 x_train is the population of a city
