--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -5,9 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "Linear regression",
-     "Here is my practice lab's code which I was sopposed to complete some parts of code .",
-   
+     "Linear regression\n",     
+     "Here is my practice lab's code which I was sopposed to complete some parts of code .\n",
+     "Outline\n"  ,
+   "1 - Packages\n",   
+   "2 - Linear regression with one variable\n",   
+   "2.1 Problem Statement"   
+   "2.2 Dataset",   
+   "2.3 Refresher on linear regression",   
+   "2.4 Compute Cost",   
+   "Exercise 1",   
+   "2.5 Gradient descent",   
+   "Exercise 2",   
+   "2.6 Learning parameters using batch gradient descent",
    "Problem Statement :",
    "Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.",
 
