--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "Linear regression\n",     
-     "Here is my practice lab's code which I was sopposed to complete some parts of code .\n",
+     "Linear regression .\n",        
+     "Here is my practice lab's code which I was supposed to complete some parts of code .\n",
     
    "Problem Statement :\n",
    "Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.\n",
