--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -22,8 +22,8 @@
    "The load_data() function shown below loads the data into variables x_train and y_train\n",
    "x_train is the population of a city\n",
    "y_train is the profit of a restaurant in that city. A negative value for profit indicates a loss.\n",
-   "Both X_train and y_train are numpy arrays.\n",   
-   "but this fataset was not accessible ,so I found it from Kaggle site and I changed some parts of original code to fix some problems . The download address of dataset : /kaggle/input/dataset/Files/ex1data1.txt"
+   "Both X_train and y_train are numpy arrays.\n",                    
+   "But this dataset was not accessible ,so I found it from Kaggle site and I changed some parts of original code to fix some problems . The download address of dataset : /kaggle/input/dataset/Files/ex1data1.txt"
 
    ]
   },
